--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,14 +4,14 @@
 // Variables
 @import 'variables';
 
-@tailwind base;
+// @tailwind base;
 
-@tailwind components;
+// @tailwind components;
 
-@tailwind utilities;
+// @tailwind utilities;
 
 // Bootstrap
-// @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
 
 body {
     background-color: #eeeeee;
